# JS_lab

./: .pyrightconfig.json  1.txt  debug_error.txt  history.csv  pytest.ini
lab_2/: a_count_paragraphs.py  b_count_characters.py  c_count_sentences.py  d_longest_sentence.py  e_longest_sentence.py  f_first_multiple_sub_clause.py  g_sentences_with_less_than_four_words.py  h_questions_or_exclamations.py  i_first_twenty_sentences.py  j_multiple_conjunctions.py  k_fourth_quartile.py  l_sorted_sentences.py  read.py  test.txt  utils.py
lab_3/: entry_to_dict.py  get_entries_by_addr.py  get_entries_by_code.py  get_failed_reads.py  log_to_dict.py  print_dict_entry_dates.py  read_log.py
lab_3_8/: .gitignore  entry_to_dict.py  get_entries_by_extension.py  gui.py  gui_additional_concept.py  gui_project.py  gui_project.ui  gui_project_jk.ui  log_to_dict.py  new_layout_based.ui  print_dict_entry_dates.py  read_log.py  sort_log.py
lab_4/: 1.py  2.py  4.py  file_stats.py  history.csv  mediaconvert.py  requirements.txt  tail.py  utils.py
lab_5/: 1_data_parser.py  2_group_m_by_key.py  3_addresses.py  4_data.py  air_quality.py  air_quality_click.py  anomalies.py  data_parser.py
lab_6/: .gitignore  Measurements.py  SeriesValidator.py  SimpleReporter.py  Station.py  TimeSeries.py  pyproject.toml  test_validators.py  utils.py
lab_6/src/: Measurements.py  SeriesValidator.py  SimpleReporter.py  Station.py  utils.py
lab_6/tests/: test_station.py  test_time_series.py  test_validators.py
lab_7/: zad_1.py  zad_2.py  zad_3.py  zad_4.py  zad_5.py  zad_6.py
lab_8/: .gitignore  gui.py  (+3 more)
(+9 files in other folders)
